[gd_scene load_steps=37 format=3 uid="uid://twl2dt6pw4nl"]

[ext_resource type="Script" path="res://Levels/ActorMovement.gd" id="1_j2pg1"]
[ext_resource type="Texture2D" uid="uid://ddkj58ann6pyd" path="res://Assets/Monsters/Human/O_Human_mon.png" id="1_vsngp"]
[ext_resource type="Shader" path="res://Shaders/Test_Level.gdshader" id="1_wq6p2"]
[ext_resource type="Script" path="res://Levels/AnimationController.gd" id="4_uae2i"]
[ext_resource type="Script" path="res://Scripts/FollowCamera.gd" id="6_b7fjx"]
[ext_resource type="Script" path="res://Scripts/FPSCounter.gd" id="7_ioykq"]
[ext_resource type="Script" path="res://Scripts/Controls/PlayerInput.gd" id="7_lk3dn"]
[ext_resource type="Script" path="res://Scripts/Core/MonsterLoader.gd" id="8_mq8e1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1mmds"]
shader = ExtResource("1_wq6p2")
cam_offset = Vector2(1.031, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h0s7e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6rsn"]
atlas = ExtResource("1_vsngp")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crge6"]
atlas = ExtResource("1_vsngp")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb23g"]
atlas = ExtResource("1_vsngp")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7jhq"]
atlas = ExtResource("1_vsngp")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktc8r"]
atlas = ExtResource("1_vsngp")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvulf"]
atlas = ExtResource("1_vsngp")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nmp2"]
atlas = ExtResource("1_vsngp")
region = Rect2(80, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4267"]
atlas = ExtResource("1_vsngp")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_js71c"]
atlas = ExtResource("1_vsngp")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a8ds"]
atlas = ExtResource("1_vsngp")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_260yg"]
atlas = ExtResource("1_vsngp")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srj1f"]
atlas = ExtResource("1_vsngp")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vnj3"]
atlas = ExtResource("1_vsngp")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5mfm"]
atlas = ExtResource("1_vsngp")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk6xy"]
atlas = ExtResource("1_vsngp")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcpqo"]
atlas = ExtResource("1_vsngp")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3r35"]
atlas = ExtResource("1_vsngp")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxhyx"]
atlas = ExtResource("1_vsngp")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smkle"]
atlas = ExtResource("1_vsngp")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcear"]
atlas = ExtResource("1_vsngp")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik234"]
atlas = ExtResource("1_vsngp")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh76y"]
atlas = ExtResource("1_vsngp")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fg1q"]
atlas = ExtResource("1_vsngp")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0os8"]
atlas = ExtResource("1_vsngp")
region = Rect2(48, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_73jl2"]
animations = [{
"frames": [SubResource("AtlasTexture_t6rsn"), SubResource("AtlasTexture_crge6"), SubResource("AtlasTexture_hb23g")],
"loop": true,
"name": &"Down",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_n7jhq"), SubResource("AtlasTexture_ktc8r"), SubResource("AtlasTexture_uvulf")],
"loop": true,
"name": &"DownLeft",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_2nmp2"), SubResource("AtlasTexture_d4267"), SubResource("AtlasTexture_js71c")],
"loop": true,
"name": &"DownRight",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_4a8ds"), SubResource("AtlasTexture_260yg"), SubResource("AtlasTexture_srj1f")],
"loop": true,
"name": &"Left",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_0vnj3"), SubResource("AtlasTexture_s5mfm"), SubResource("AtlasTexture_yk6xy")],
"loop": true,
"name": &"Right",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_pcpqo"), SubResource("AtlasTexture_q3r35"), SubResource("AtlasTexture_mxhyx")],
"loop": true,
"name": &"Up",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_smkle"), SubResource("AtlasTexture_vcear"), SubResource("AtlasTexture_ik234")],
"loop": true,
"name": &"UpLeft",
"speed": 12.0
}, {
"frames": [SubResource("AtlasTexture_sh76y"), SubResource("AtlasTexture_0fg1q"), SubResource("AtlasTexture_p0os8")],
"loop": true,
"name": &"UpRight",
"speed": 12.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_ou8ma"]
font_size = 32

[node name="Game" type="Node2D"]

[node name="ViewPort_Scale&Size" type="Control" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = -10.0
scale = Vector2(5, 5)

[node name="SmoothCamContainer" type="SubViewportContainer" parent="ViewPort_Scale&Size"]
material = SubResource("ShaderMaterial_1mmds")
offset_right = 392.0
offset_bottom = 224.0

[node name="SubViewport" type="SubViewport" parent="ViewPort_Scale&Size/SmoothCamContainer"]
disable_3d = true
handle_input_locally = false
gui_snap_controls_to_pixels = false
size = Vector2i(386, 218)
render_target_update_mode = 4

[node name="Player" type="Node2D" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport"]

[node name="TileMap" type="TileMap" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport"]
format = 2

[node name="PlayerChar" type="CharacterBody2D" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport"]
motion_mode = 1
floor_stop_on_slope = false
floor_constant_speed = true
script = ExtResource("1_j2pg1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport/PlayerChar"]
shape = SubResource("CapsuleShape2D_h0s7e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport/PlayerChar"]
frames = SubResource("SpriteFrames_73jl2")
animation = &"DownRight"
script = ExtResource("4_uae2i")

[node name="Camera2D" type="Camera2D" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport" node_paths=PackedStringArray("player", "GameNode", "smotCamContainer")]
current = true
drag_left_margin = 0.08
drag_top_margin = 0.22
drag_right_margin = 0.08
drag_bottom_margin = 0.22
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("6_b7fjx")
player = NodePath("../PlayerChar")
GameNode = NodePath("../../../..")
smotCamContainer = NodePath("../..")
smooth_speed = 4.0

[node name="PlayerInput" type="Node" parent="ViewPort_Scale&Size/SmoothCamContainer/SubViewport" node_paths=PackedStringArray("playerMovement")]
script = ExtResource("7_lk3dn")
playerMovement = NodePath("../PlayerChar")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Text"
label_settings = SubResource("LabelSettings_ou8ma")
script = ExtResource("7_ioykq")

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("8_mq8e1")
